--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel = "icon" href = "/imgs/favicon-32x32.png" type = "image/png">
+    <link rel = "icon" href = "./imgs/favicon-32x32.png" type = "image/png">
 
 </head>
 
@@ -21,7 +21,7 @@
             <div id="description" class="description"></div>
             <div class="divider"></div>
             <div id="button" class="button">
-                <img src="../imgs/icon-dice.svg" alt="Next">
+                <img src="./imgs/icon-dice.svg" alt="Next">
             </div>
         </div>
     </section>
